--- a/style.css
+++ b/style.css
@@ -131,3 +131,18 @@ i {
   display: flex;
   align-items: center;
 }
+
+@media only screen and (max-width: 500px) {
+  .app-container {
+    max-width: 90%;
+  }
+
+  .logo img {
+    width: 250px;
+  }
+
+  input {
+    display: block;
+    width: 90%;
+  }
+}
