--- a/style.css
+++ b/style.css
@@ -133,6 +133,10 @@ i {
 }
 
 @media only screen and (max-width: 500px) {
+  body {
+    height: 1000px;
+  }
+
   .app-container {
     max-width: 90%;
   }
